Correcting javadoc and parameter names (this is independent of Resource / ResourceFactory).
Also use Path.of() instead of Paths.get() per javadoc recommendations.